# DnD-CharacterGenerator

./: Cargo.toml  Outline.txt
src/: character.rs  class.rs  descriptions.rs  equipment.rs  main.rs  race.rs  spells.rs  stats.rs
